--- a/enriquekesslerm.com/package.json
+++ b/enriquekesslerm.com/package.json
@@ -6,6 +6,8 @@
   "author": "Xiaoxing Hu <xiaoxing@huxx.org>",
   "dependencies": {
     "gatsby": "^2.27.2",
+    "gatsby-plugin-image": "^1.1.2",
+    "gatsby-plugin-sharp": "^2.14.3",
     "gatsby-theme-blorg": "^2.3.13",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
