Started working on adding the cloudquestionslogo, problems with svgs

--- a/enriquekesslerm.com/package.json
+++ b/enriquekesslerm.com/package.json
@@ -7,8 +7,10 @@
   "dependencies": {
     "gatsby": "^2.27.2",
     "gatsby-plugin-image": "^1.1.2",
+    "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "^2.14.3",
     "gatsby-theme-blorg": "^2.3.13",
+    "gatsby-transformer-sharp": "^2.12.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
