--- a/enriquekesslerm.com/package.json
+++ b/enriquekesslerm.com/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "gatsby-starter-blorg",
+  "name": "gatsby-starter-default",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby and org-mode",
-  "version": "1.0.0",
-  "author": "Xiaoxing Hu <xiaoxing@huxx.org>",
+  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "version": "0.1.0",
+  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^3.0.2",
-    "elasticlunr": "^0.9.5",
-    "gatsby": "^2.27.2",
-    "gatsby-plugin-image": "^1.1.2",
-    "gatsby-plugin-optimize-svgs": "^1.0.5",
+    "gatsby": "^3.2.1",
+    "gatsby-plugin-gatsby-cloud": "^2.2.0",
+    "gatsby-plugin-image": "^1.2.0",
+    "gatsby-plugin-manifest": "^3.2.0",
+    "gatsby-plugin-offline": "^4.2.0",
+    "gatsby-plugin-react-helmet": "^4.2.0",
     "gatsby-plugin-react-leaflet": "^3.0.0",
-    "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.14.3",
-    "gatsby-theme-blorg": "^2.3.13",
-    "gatsby-transformer-sharp": "^2.12.1",
+    "gatsby-plugin-react-svg": "^3.0.1",
+    "gatsby-plugin-sharp": "^3.2.0",
+    "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-theme-blorg": "^2.3.16",
+    "gatsby-transformer-sharp": "^3.2.0",
     "leaflet": "^1.7.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -23,29 +26,27 @@
     "react-leaflet": "^3.1.0"
   },
   "devDependencies": {
-    "prettier": "^2.2.0"
+    "install-peers": "^1.0.3",
+    "prettier": "2.2.1"
   },
   "keywords": [
-    "gatsby",
-    "blog",
-    "org-mode",
-    "orga"
+    "gatsby"
   ],
-  "license": "MIT",
+  "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
-    "predevelop": "rm -rf .cache",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
+    "clean": "gatsby clean",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/orgapp/gatsby-starter-blorg"
+    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
   },
   "bugs": {
-    "url": "https://github.com/orgapp/gatsby-starter-blorg/issues"
+    "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
