Adding deletion of the testing.org file and adding removal of cache.

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
+    "prebuild": "rm -rf .cache",
     "predevelop": "rm -rf .cache",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
