Fixing problem with weird css on gatsby build.

--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
   ],
   "license": "MIT",
   "scripts": {
+    "clean": "gatsby clean", 
     "build": "gatsby build",
-    "prebuild": "rm -rf .cache",
+    "prebuild": "gatsby clean",
     "predevelop": "rm -rf .cache",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
