Removing the dev_ssr flag, adding CV to social buttons and updating blogText

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "clean": "gatsby clean", 
     "build": "gatsby build",
     "prebuild": "gatsby clean",
-    "predevelop": "rm -rf .cache",
+    "predevelop": "gatsby clean",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
