--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^3.0.2",
     "eslint-config-react-app": "^6.0.0",
     "gatsby": "^3.2.1",
+    "gatsby-plugin-feed": "^3.3.0",
     "gatsby-plugin-image": "^1.2.1",
     "gatsby-plugin-react-leaflet": "^3.0.0",
     "gatsby-plugin-react-svg": "^3.0.1",
@@ -31,7 +32,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "clean": "gatsby clean", 
+    "clean": "gatsby clean",
     "build": "gatsby build",
     "prebuild": "gatsby clean",
     "predevelop": "gatsby clean",
