feat: add initial cypress files
Besides that, I finally could run the yarn test:e2e script
which was before broken (in the previous commit) because for
some reason yarn didn't install date-fns, which is a dependency.

At the moment, everything is in place to start writing tests. There
is even example files. They will eventually be removed from the repo,
but I find having an initial files commit is not so bad.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^3.0.2",
     "cypress": "^7.4.0",
+    "date-fns": "^2.21.3",
     "eslint-config-react-app": "^6.0.0",
     "gatsby": "^3.2.1",
     "gatsby-plugin-feed": "^3.3.0",
